<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.applozic.mobicomkit.sample.EcommerceFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ecommerce_text1"
            android:textColor="#000000" />

        <Button
            android:id="@+id/initiateChatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/holo_blue"
            android:onClick="initiateChatClick"
            android:text="@string/initiate_chat_button_info"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/initiateChatButton"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/holo_blue"
            android:onClick="takeOrder"
            android:text="@string/order_sample_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_start_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_order"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/holo_blue"
            android:onClick="startSample"
            android:text="Start Sample"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/launch_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_start_sample"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/holo_blue"
            android:onClick="groupChat"
	        android:text="@string/group_chat"
            android:textColor="@color/white"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#AB47BC"
                    android:drawableTop="@drawable/ic_action"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button1_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#E91E63"
                    android:drawableTop="@drawable/ic_action1"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button2_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#3F51B5"
                    android:drawableTop="@drawable/ic_action2"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button3_text"
                    android:textColor="#FFFFFF" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#FFB74D"
                    android:drawableTop="@drawable/ic_action3"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button4_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#CDDC39"
                    android:drawableTop="@drawable/ic_action4"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button5_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#8BC34A"
                    android:drawableTop="@drawable/ic_action5"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button6_text"
                    android:textColor="#FFFFFF" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#F44336"
                    android:drawableTop="@drawable/ic_action6"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button7_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#1DE9B6"
                    android:drawableTop="@drawable/ic_action7"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button8_text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="#26A69A"
                    android:drawableTop="@drawable/ic_action8"
                    android:gravity="center"
                    android:padding="20dip"
                    android:singleLine="true"
                    android:text="@string/ecommerce_button9_text"
                    android:textColor="#FFFFFF" />

            </TableRow>

        </TableLayout>

        <!--  <Button
              android:id="@+id/button_chat"
              android:layout_width="188dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@color/holo_blue"
              android:onClick="startChat"
              android:text="@string/ecommerce_chat_button"
              android:textColor="@color/white" />-->


    </LinearLayout>

</FrameLayout>
